# hybridmethods

./: .flake8  .gitignore  LICENSE  README.md  lints.txt  pyproject.toml
.github/workflows/: python-package.yml
hybridmethods/: __init__.py
tests/: test_hybridmethod.py
